<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditGearActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">
        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text"
            android:background="@color/blueTeal" />
        <TextView
            android:id="@+id/gearTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:text="@string/gear_item_number" />
    </RelativeLayout>

    <EditText
        android:id="@+id/gearMakerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_maker">
    </EditText>
    <TextView
        android:id="@+id/gearMakerErrorBox"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText
        android:id="@+id/gearDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/enter_date">
    </EditText>
    <TextView
        android:id="@+id/gearDateErrorBox"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText
        android:id="@+id/gearPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price">
    </EditText>
    <TextView
        android:id="@+id/gearPriceErrorBox"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText
        android:id="@+id/gearDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description">
    </EditText>
    <TextView
        android:id="@+id/gearDescriptionErrorBox"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText
        android:id="@+id/gearCommentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_comment">
    </EditText>
    <TextView
        android:id="@+id/gearCommentErrorBox"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <Button
        android:id="@+id/addGearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueTeal"
        android:text="@string/add_button_text">
    </Button>
    <Button
        android:id="@+id/updateGearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueTeal"
        android:text="@string/update_button_text">
    </Button>

</LinearLayout>